--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Kirill Warp <kirill9990@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@types/three": "~0.153.0",
     "@types/webpack-dev-server": "^4.7.2",
     "@webpack-cli/generators": "^3.0.7",
     "autoprefixer": "^10.4.14",
@@ -32,6 +33,7 @@
     "workbox-webpack-plugin": "^7.0.0"
   },
   "dependencies": {
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "three": "~0.153.0"
   }
 }
