--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode=production --node-env=production",
+    "build": "npm build:prod",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
@@ -16,28 +16,29 @@
   "license": "ISC",
   "devDependencies": {
     "@types/three": "~0.153.0",
-    "@types/webpack-dev-server": "^4.7.2",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@webpack-cli/generators": "^3.0.7",
-    "autoprefixer": "^10.4.14",
-    "babel-loader": "^9.1.2",
-    "css-loader": "^6.8.1",
-    "eslint": "^8.45.0",
-    "html-webpack-plugin": "^5.5.3",
-    "mini-css-extract-plugin": "^2.7.6",
-    "postcss-loader": "^7.3.3",
-    "style-loader": "^3.3.3",
-    "ts-loader": "^9.4.4",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths-webpack-plugin": "^4.0.1",
-    "webpack": "^5.88.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "workbox-webpack-plugin": "^7.0.0"
+    "@types/webpack-dev-server": "~4.7.2",
+    "@typescript-eslint/eslint-plugin": "~6.0.0",
+    "@typescript-eslint/parser": "~6.0.0",
+    "@webpack-cli/generators": "~3.0.7",
+    "autoprefixer": "~10.4.14",
+    "babel-loader": "~9.1.2",
+    "css-loader": "~6.8.1",
+    "eslint": "~8.45.0",
+    "html-webpack-plugin": "~5.5.3",
+    "mini-css-extract-plugin": "~2.7.6",
+    "postcss-loader": "~7.3.3",
+    "style-loader": "~3.3.3",
+    "ts-loader": "~9.4.4",
+    "ts-shader-loader": "~2.0.2",
+    "ts-node": "~10.9.1",
+    "tsconfig-paths-webpack-plugin": "~4.0.1",
+    "webpack": "~5.88.1",
+    "webpack-cli": "~5.1.4",
+    "webpack-dev-server": "~4.15.1",
+    "workbox-webpack-plugin": "~7.0.0"
   },
   "dependencies": {
-    "normalize.css": "^8.0.1",
+    "normalize.css": "~8.0.1",
     "three": "~0.153.0"
   }
 }
