--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@webpack-cli/generators": "~3.0.7",
     "autoprefixer": "~10.4.14",
     "babel-loader": "~9.1.2",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "~6.8.1",
     "eslint": "~8.45.0",
     "html-webpack-plugin": "~5.5.3",
@@ -29,8 +30,8 @@
     "postcss-loader": "~7.3.3",
     "style-loader": "~3.3.3",
     "ts-loader": "~9.4.4",
-    "ts-shader-loader": "~2.0.2",
     "ts-node": "~10.9.1",
+    "ts-shader-loader": "~2.0.2",
     "tsconfig-paths-webpack-plugin": "~4.0.1",
     "webpack": "~5.88.1",
     "webpack-cli": "~5.1.4",
