--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,10 @@
     "sourceMap": false,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "lib": ["es2015", "dom"],
+    "lib": [
+      "es2015",
+      "dom"
+    ],
     "baseUrl": ".",
     "typeRoots": [
       "node_modules/@types",
