--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "noImplicitAny": true,
     "strict": true,
+    "noImplicitThis": true,
     "module": "commonjs",
     "target": "es6",
     "outDir": "dist",
