--- a/package.json
+++ b/package.json
@@ -15,25 +15,25 @@
   "author": "Kirill Warp <kirill9990@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "@types/three": "~0.153.0",
+    "@types/three": "~0.158.2",
     "@types/webpack-dev-server": "~4.7.2",
     "@typescript-eslint/eslint-plugin": "~6.0.0",
     "@typescript-eslint/parser": "~6.0.0",
     "@webpack-cli/generators": "~3.0.7",
-    "autoprefixer": "~10.4.14",
-    "babel-loader": "~9.1.2",
-    "copy-webpack-plugin": "^11.0.0",
+    "autoprefixer": "~10.4.16",
+    "babel-loader": "~9.1.3",
+    "copy-webpack-plugin": "~11.0.0",
     "css-loader": "~6.8.1",
-    "eslint": "~8.45.0",
+    "eslint": "~8.53.0",
     "html-webpack-plugin": "~5.5.3",
     "mini-css-extract-plugin": "~2.7.6",
     "postcss-loader": "~7.3.3",
     "style-loader": "~3.3.3",
-    "ts-loader": "~9.4.4",
+    "ts-loader": "~9.5.1",
     "ts-node": "~10.9.1",
     "ts-shader-loader": "~2.0.2",
-    "tsconfig-paths-webpack-plugin": "~4.0.1",
-    "webpack": "~5.88.1",
+    "tsconfig-paths-webpack-plugin": "~4.1.0",
+    "webpack": "~5.89.0",
     "webpack-cli": "~5.1.4",
     "webpack-dev-server": "~4.15.1",
     "workbox-webpack-plugin": "~7.0.0"
@@ -41,6 +41,6 @@
   "dependencies": {
     "normalize.css": "~8.0.1",
     "simplex-noise": "^4.0.1",
-    "three": "~0.153.0"
+    "three": "~0.158.0"
   }
 }
